# hecate-protobuf

./: .gitignore  Cargo.toml  build.rs  prost-build-config.yml
src/: hecate.proto  lib.rs
