[package]
name = "hecate-protobuf"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { version = "0.13.5", default-features = false, features = ["prost-derive"] }
serde = { version = "1.0.197", default-features = false, features = ["alloc", "derive"] }

[build-dependencies]
serde_yaml = "0.9.34"
prost-build-config = "0.6.3"
anyhow = "1.0.82"
